# baxter

./: .gitignore  CHANGELOG.rst  CHANGES  CHANGES.md  LICENSE  README.md  README.rst  RELEASE.rst  baxter.sh  baxter_sdk.rosinstall  init.sh
baxter/: CMakeLists.txt  package.xml  stack.xml
baxter/baxter_description/: CMakeLists.txt  baxter.urdf  gazebo_check_urdf.sh  mainpage.dox  manifest.xml  model.config
baxter/baxter_description/launch/: simulation.launch
baxter/baxter_description/urdf/: baxter.urdf  urdf_to_pdf.sh
baxter/baxter_gazebo/: CMakeLists.txt  package.xml
baxter/baxter_gazebo/launch/: baxter_world.launch
baxter/baxter_gazebo/worlds/: baxter.world
baxter/baxter_interface/: CMakeLists.txt  manifest.xml
baxter/baxter_interface/cfg/: JointTrajectoryActionServer.cfg
baxter/baxter_interface/src/: trajectory_controller.py  trajectory_test.py
baxter/baxter_msgs/: manifest.xml
baxter/baxter_msgs/msg/: CalibrateArmEnable.msg  CameraControl.msg  GripperIdentity.msg  GripperState.msg  ITB.msg  JointCommandMode.msg  JointControlMode.msg  JointTorques.msg  RobustControllerStatus.msg  TareData.msg  TareEnable.msg
baxter/baxter_msgs/srv/: SetSupervisorEnable.srv  SetSupervisorReset.srv  SetSupervisorStop.srv  SolvePositionIK.srv
baxter/calibration/: manifest.xml
baxter/calibration/src/: calibrate_arm.py  tare.py
baxter/examples/gripper_control/: gripper.launch  joystick.launch  keyboard.launch  mainpage.dox  manifest.xml
baxter/examples/head_control/: manifest.xml
baxter/examples/input_output/: manifest.xml
baxter/examples/inverse_kinematics/: manifest.xml
baxter/examples/joint_position/: joystick.launch  mainpage.dox  manifest.xml
baxter/examples/joint_trajectory/: manifest.xml
baxter/examples/joint_velocity/: joystick.launch  mainpage.dox  manifest.xml
baxter/examples/robot_control/: CMakeLists.txt  manifest.xml
baxter/tools/: manifest.xml
baxter/tools/src/: calibrate_arm.py  enable_robot.py  tare.py  tuck_arms.py  update_robot.py  xdisplay_image.py
baxter/urdf/: baxter.xml  dv_dual.xml
baxter/utilities/: manifest.xml
baxter_core_msgs/: CMakeLists.txt  package.xml
baxter_core_msgs/msg/: EndEffectorProperties.msg  EndEffectorState.msg  JointCommand.msg  NavigatorState.msg  SEAJointState.msg
baxter_core_msgs/srv/: SolvePositionIK.srv
baxter_description/: CMakeLists.txt  package.xml
baxter_examples/: CMakeLists.txt  package.xml  setup.py
baxter_examples/cfg/: JointSpringsExample.cfg
baxter_examples/launch/: gripper_action_client.launch  gripper_joystick.launch  joint_position_joystick.launch  joint_trajectory_client.launch  joint_trajectory_file_playback.launch  joint_trajectory_test.launch
baxter_examples/scripts/: digital_io_blink.py  gripper_action_client.py  gripper_cuff_control.py  gripper_joystick.py  gripper_keyboard.py  head_wobbler.py  ik_service.py  ik_service_client.py  joint_position_file_playback.py  joint_position_joystick.py  joint_position_keyboard.py  joint_position_recorder.py  joint_recorder.py  joint_torque_springs.py  joint_trajectory_client.py  joint_trajectory_file_playback.py  joint_velocity_puppet.py  joint_velocity_wobbler.py  navigator_io.py  xdisplay_image.py
baxter_examples/src/baxter_examples/: __init__.py  joint_recorder.py
baxter_examples/src/baxter_io_devices/: getch.py
baxter_interface/: CMakeLists.txt  package.xml  setup.py
baxter_interface/cfg/: GripperActionServer.cfg  JointTrajectoryActionServer.cfg
baxter_interface/docs/: JointTrajectoryActionServerConfig-usage.dox  JointTrajectoryActionServerConfig.dox  JointTrajectoryActionServerConfig.wikidoc
baxter_interface/scripts/: gripper_action_server.py  joint_trajectory_action_server.py
baxter_interface/src/: gripper_action_server.py  joint_trajectory_action_server.py  trajectory_controller.py
baxter_interface/src/baxter_control/: __init__.py
baxter_interface/src/baxter_dataflow/: signals.py  wait_for.py  weakrefset.py
baxter_interface/src/baxter_interface/: __init__.py  analog_io.py  camera.py  digital_io.py  gripper.py  head.py  limb.py  navigator.py  robot_enable.py  robust_controller.py  robustcontroller.py
baxter_interface/src/gripper_action/: __init__.py  gripper_action.py  gripper_action_server.py
baxter_interface/src/joint_trajectory/: joint_trajectory_action_server.py
baxter_interface/src/joint_trajectory_action/: __init__.py  joint_trajectory_action.py  joint_trajectory_action_server.py
baxter_maintenance_msgs/: CMakeLists.txt  package.xml
baxter_maintenance_msgs/msg/: CalibrateArmEnable.msg  TareEnable.msg  UpdateSource.msg  UpdateStatus.msg
baxter_maintenance_msgs/srv/: LSCores.srv
baxter_msgs/: CMakeLists.txt  package.xml
baxter_msgs/msg/: EndpointState.msg  GripperCommand.msg  GripperProperties.msg  GripperState.msg  ITB.msg  ITBStates.msg  JointVelocities.msg  UpdateSources.msg
baxter_msgs/srv/: RMCores.srv
baxter_sdk/: CMakeLists.txt  package.xml
baxter_tools/: CMakeLists.txt  package.xml  setup.py
baxter_tools/scripts/: calibrate_arm.py  camera_control.py  enable_robot.py  smoke_test.py  tare.py  tuck_arms.py  update_robot.py
baxter_tools/src/baxter_tools/: __init__.py  smoketests.py
examples/gripper_action/: CMakeLists.txt  package.xml  setup.py
examples/gripper_action/src/: gripper_action_test.py
examples/gripper_control/: CMakeLists.txt  package.xml  setup.py
examples/gripper_control/launch/: gripper_action_test.launch
examples/gripper_control/src/: gripper_action_test.py  joystick.py  keyboard.py
examples/head_control/: CMakeLists.txt  package.xml  setup.py
examples/head_control/src/: wobbler.py  xdisplay_image.py
examples/input_output/: CMakeLists.txt  package.xml
examples/input_output/src/: camera_control.py  navigator.py  (+3 more)
examples/joint_torque/: CMakeLists.txt  package.xml  setup.py
examples/joint_trajectory/: CMakeLists.txt  package.xml  setup.py
tools/: CMakeLists.txt  package.xml  setup.py
tools/src/: calibrate_arm.py  camera_control.py  enable_robot.py  tare.py  tuck_arms.py  update_robot.py
utilities/: CMakeLists.txt  package.xml  setup.py
(+140 files in other folders)
