<?xml version="1.0"?>
<package>
  <name>baxter</name>
  <version>0.6.1</version>
  <description>
    baxter metapackage containing all of the SDK
    packages for Baxter from Rethink Robotics.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://www.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_common
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_common/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>baxter_description</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_msgs</run_depend>
  <run_depend>tools</run_depend>
  <run_depend>utilities</run_depend>
  <run_depend>gripper_control</run_depend>
  <run_depend>head_control</run_depend>
  <run_depend>input_output</run_depend>
  <run_depend>inverse_kinematics</run_depend>
  <run_depend>joint_position</run_depend>
  <run_depend>joint_trajectory</run_depend>
  <run_depend>joint_velocity</run_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
