<?xml version="1.0"?>
<package>
  <name>baxter_interface</name>
  <version>0.6.1</version>
  <description>
    Convenient python interface classes for control
    of the Baxter robot from Rethink Robotics.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://www.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sdk-examples
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sdk-examples/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
