<?xml version="1.0"?>
<package>
  <name>head_control</name>
  <version>0.6.1</version>
  <description>
    Example programs for head control
    using the Baxter SDK.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://www.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sdk-examples
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sdk-examples/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>baxter_interface</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>baxter_interface</run_depend>

</package>
